[package]
name = "hosts"
version = "0.1.0"
authors = ["flxxyz <zzz@alloc.cloud>"]
readme = "README.md"
repository = "https://github.com/flxxyz/hosts.rs"
edition = "2021"

[[bin]]
name = "hosts"
path = "src/main.rs"

[workspace]
resolver = "2"
members = ["core"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.8"
reqwest = { version = "0.11", default-features = false, features = ["blocking"] }
core = { path = "./core" }

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
